--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Consolidando os estudos de api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js"
   },
   "author": "JoseFaccirolli",
   "license": "ISC",
@@ -12,6 +13,8 @@
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3"
   }
 }
